
  Support for Jython 2.1 has been dropped.

  Implement feature request #104 - add info about Maven dependencies
  in Clojars repository. The maven site reports have been extended to
  include dependency information. Thanks to Jonas Öhrnell for the
  request.

  Fix bug #240 Cookie Parsing failing for HttpOnly Cookies. Thanks
  to Chris Barran and juray for the reports.


The Grinder 3.11
----------------

  Upgrade the packaged version of Jython to Jython 2.5.3, including
  the Jython standard library. Remove the support for the traditional
  Jython instrumenter.

  Fix bug #220 - Memory leak in MarkerFactory. Thanks to Fei for the
  report.

  Fix bug #221 - "time to establish connection" for re-used
  connection. The HTTP plugin host resolution and connection
  establishment times are now only recorded when a new connection is
  established; for tests that re-use connections, these values will be
  zero. The summary statistics average these values over the number of
  established connections, not all tests. A "New connections"
  statistic is available in the data log. Thanks to Teresa Plumari for
  the report.

  The worker process summary statistics table now prints 0/0 as a
  '-' character, rather than the previous behaviour of using a NaN
  unicode character. Thanks to Travis Bear for the feedback.

  Fix bug #223 - relative grinder.script path not resolved correctly
  when using the REST API. Thanks to Kevin Laurier for the report.

  Implement feature request #104 - latest Statistics from REST API.
  Thanks to Marc Holden for the request and the implementation.

  Fix bug #222 - Script directory should be added to the python
  path. This matches the behaviour of the Python interpreter. Thanks
  to Poornima Mallur for the report.

  Implement feature request #100 - grinder.jvm.classpath should allow
  relative paths. The grinder.jvm.classpath property is now evaluated
  based on the worker process working directory, not the agent