@@ -1,4 +1,5 @@
 // Copyright (C) 2000 - 2013 Philip Aston
+// Copyright (C) 2015 Marc Holden
 // All rights reserved.
 //
 // This file is part of The Grinder software distribution. Refer to
@@ -689,71 +690,71 @@ public class TestHTTPRequest {
     assertEquals("PUT /bhhh HTTP/1.1", m_handler.getRequestFirstHeader());
     assertArrayEquals(data7, m_handler.getLastRequestBody());
   }
-  
+
   @Test public void testPATCH() throws Exception {
-	    final HTTPRequest request = new HTTPRequest();
+      final HTTPRequest request = new HTTPRequest();
 
-	    try {
-	      request.PATCH();
-	      fail("Expected URLException");
-	    }
-	    catch (final URLException e) {
-	    }
+      try {
+        request.PATCH();
+        fail("Expected URLException");
+      }
+      catch (final URLException e) {
+      }
 
-	    try {
-	      request.PATCH("?:/partial");
-	      fail("Expected URLException");
-	    }
-	    catch (final URLException e) {
-	    }
+      try {
+        request.PATCH("?:/partial");
+        fail("Expected URLException");
+      }
+      catch (final URLException e) {
+      }
 
-	    final HTTPResponse response = request.PATCH(m_handler.getURL());
-	    assertEquals(200, response.getStatusCode());
-	    assertEquals("PATCH / HTTP/1.1", m_handler.getRequestFirstHeader());
+      final HTTPResponse response = request.PATCH(m_handler.getURL());
+      assertEquals(200, response.getStatusCode());
+      assertEquals("PATCH / HTTP/1.1", m_handler.getRequestFirstHeader());
 
-	    request.setUrl(m_handler.getURL());
-	    final HTTPResponse response2 = request.PATCH("/foo");
-	    assertEquals(200, response2.getStatusCode());
-	    assertEquals("PATCH /foo HTTP/1.1", m_handler.getRequestFirstHeader());
+      request.setUrl(m_handler.getURL());
+      final HTTPResponse response2 = request.PATCH("/foo");
+      assertEquals(200, response2.getStatusCode());
+      assertEquals("PATCH /foo HTTP/1.1", m_handler.getRequestFirstHeader());
 
-	    final HTTPResponse response3 = request.PATCH();
-	    assertEquals(200, response3.getStatusCode());
-	    assertEquals("PATCH / HTTP/1.1", m_handler.getRequestFirstHeader());
+      final HTTPResponse response3 = request.PATCH();
+      assertEquals(200, response3.getStatusCode());
+      assertEquals("PATCH / HTTP/1.1", m_handler.getRequestFirstHeader());
 
-	    final byte[] data4 = randomBytes(10);
+      final byte[] data4 = randomBytes(10);
 
-	    final HTTPResponse response4 = request.PATCH("/blah", data4);
-	    assertEquals(200, response4.getStatusCode());
-	    assertEquals("PATCH /blah HTTP/1.1", m_handler.getRequestFirstHeader());
-	    assertArrayEquals(data4, m_handler.getLastRequestBody());
+      final HTTPResponse response4 = request.PATCH("/blah", data4);
+      assertEquals(200, response4.getStatusCode());
+      assertEquals("PATCH /blah HTTP/1.1", m_handler.getRequestFirstHeader());
+      assertArrayEquals(data4, m_handler.getLastRequestBody());
 
-	    final byte[] data5 = randomBytes(100);
+      final byte[] data5 = randomBytes(100);
 
-	    request.setUrl(m_handler.getURL() + "/lah/");
-	    request.setData(data5);
-	    final HTTPResponse response5 = request.PATCH("/blah");
-	    assertEquals(200, response5.getStatusCode());
-	    assertEquals("PATCH /blah HTTP/1.1", m_handler.getRequestFirstHeader());
-	    assertArrayEquals(data5, m_handler.getLastRequestBody());
+      request.setUrl(m_handler.getURL() + "/lah/");
+      request.setData(data5);
+      final HTTPResponse response5 = request.PATCH("/blah");
+      assertEquals(200, response5.getStatusCode());
+      assertEquals("PATCH /blah HTTP/1.1", m_handler.getRequestFirstHeader());
+      assertArrayEquals(data5, m_handler.getLastRequestBody());
 
-	    final NVPair[] headers6 = {
-	      new NVPair("key", "value"),
-	    };
+      final NVPair[] headers6 = {
+        new NVPair("key", "value"),
+      };
 
-	    request.setHeaders(headers6);
-	    final HTTPResponse response6 = request.PATCH();
-	    assertEquals(200, response6.getStatusCode());
-	    assertEquals("PATCH /lah/ HTTP/1.1", m_handler.getRequestFirstHeader());
-	    m_handler.assertRequestContainsHeader("key: value");
+      request.setHeaders(headers6);
+      final HTTPResponse response6 = request.PATCH();
+      assertEquals(200, response6.getStatusCode());
+      assertEquals("PATCH /lah/ HTTP/1.1", m_handler.getRequestFirstHeader());
+      m_handler.assertRequestContainsHeader("key: value");
 
-	    final byte[] data7 = randomBytes(10000);
+      final byte[] data7 = randomBytes(10000);
 
-	    final HTTPResponse response7 = request.PATCH("/bhhh",
-	                                               new ByteArrayInputStream(data7));
-	    assertEquals(200, response7.getStatusCode());
-	    assertEquals("PATCH /bhhh HTTP/1.1", m_handler.getRequestFirstHeader());
-	    assertArrayEquals(data7, m_handler.getLastRequestBody());
-	  }
+      final HTTPResponse response7 = request.PATCH("/bhhh",
+                                                 new ByteArrayInputStream(data7));
+      assertEquals(200, response7.getStatusCode());
+      assertEquals("PATCH /bhhh HTTP/1.1", m_handler.getRequestFirstHeader());
+      assertArrayEquals(data7, m_handler.getLastRequestBody());
+    }
 
   @Test public void testTRACE() throws Exception {
     final HTTPRequest request = new HTTPRequest();
